# the-browser-arena

./: .gitignore  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  MULTI_AGENT_IMPLEMENTATION.md  PROJECT.md  PYTHON_AGENTS_SETUP.md  QUICK_START.md  README.md  SETUP_COMPLETE.md  components.json  env.example  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json
.github/workflows/: docker-build-push.yml  docker-test-build.yml  update-packages.yml
agents/: .dockerignore  Dockerfile  INTEGRATION.md  QUICKSTART.md  README.md  SUMMARY.md  TROUBLESHOOTING.md  browser.py  docker-compose.yml  env.example  instruction_validation.py  pyproject.toml  requirements.txt  server.py  start.sh  test_convex.py
agents/browser-use/: main.py
agents/browser_use/: __init__.py
agents/browser_use_agent/: __init__.py  main.py  tools.py
agents/notte_agent/: __init__.py  main.py
agents/skyvern_agent/: __init__.py  main.py
app/: layout.tsx  page.tsx
components/: chat-interface.tsx  sidebar.tsx
convex/: actions.ts  apiKeys.ts  auth.config.ts  auth.ts  battles.ts  http.ts  mutations.ts  queries.ts  schema.ts  tsconfig.json
convex/_generated/: api.d.ts
convex/betterAuth/: schema.ts
convex/lib/: arena.ts
lib/: auth-client.ts  auth.ts
lib/db/: index.ts  schema.ts
public/js/: webmcp.js
src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  pro.css  robots.ts  sitemap.ts
src/components/: agent-config-dialog.tsx  agent-panel.tsx  agent-properties-dialog.tsx  animated-headline.tsx  app-sidebar.tsx  app-theme-applier.tsx  battle.tsx  chat-input.tsx  github-star-button.tsx  help-button.tsx  home-page-layout.tsx  loading-dino.tsx  logo.tsx  mode-toggle.tsx  nav-sessions.tsx  session.tsx  settings-button.tsx  team-switcher.tsx  theme-switcher.tsx  user-info.tsx
src/convex/: auth.ts  sessions.ts
src/lib/: api-keys.ts  browser.ts  env-keys.ts  fingerprint.ts  http-errors.ts  instruction-validation.ts  pricing.ts  rate-limit.ts
src/types/: arena.ts  session.ts
stagehand/: .gitignore  README.md  env.example  package-lock.json  package.json  tsconfig.json
stagehand/src/: index.ts
types/: arena.ts
(+96 files in other folders)
