[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0",
    "anchorbrowser>=0.1.0",
    "browser-use @ git+https://github.com/browser-use/browser-use.git",
    "notte-sdk>=1.7.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "convex>=0.5.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.10.0",
    "filetype>=1.2.0",
]

[tool.setuptools]
packages = ["browser_use_agent", "skyvern_agent", "notte_agent"]

[tool.setuptools.package-data]
"*" = ["*.py"]
